--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,90 @@
+p {
+  margin: 0;
+}
+
+.icon {
+  width: 100px;
+  height: 100px;
+  pointer-events: none;
+}
+
+.file {
+  display: none;
+}
+
+.file::file-selector-button {
+  font-size: 14px;
+  background: #fff;
+  border: 1px solid #111;
+  border-radius: 12px;
+  padding: 4px 32px;
+  cursor: pointer;
+}
+
+.preview:hover {
+  border-color: #111;
+}
+
+.preview.active {
+  background-color: #efeef3;
+  border-color: #111;
+}
+
+.preview_msg {
+  font-weight: 500;
+  font-size: 18px;
+  margin: 20px 0 10px;
+}
+
+.preview_desc {
+  margin: 0;
+  font-size: 14px;
+}
+
+.preview_info {
+  width: 100%;
+  list-style: none;
+  padding: 0;
+  gap: 16px;
+  display: flex;
+  flex-direction: column;
+}
+
+.preview_info .info_key {
+  display: block;
+  font-weight: 500;
+  font-size: 12px;
+  margin-bottom: 4px;
+}
+
+.preview_info .info_value {
+  font-size: 14px;
+}
+
+body {
+  margin: 0;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 70vh;
+  background-color: #f7f7f7;
+}
+
 .App {
   text-align: center;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.preview {
+  width: 300px;
+  height: 150px;
+  margin: auto;
+  background-color: #fff;
+  border-radius: 10px;
+  border: 3px dashed #ddd;
+  padding: 30px;
   display: flex;
   flex-direction: column;
-  align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+  align-items: center;
+  cursor: pointer;
 }
